# figureagent-inkscape_v0.1

./: .env.example  .gitignore  README.md  architecture.md  human_level_editor_roadmap.md  mcp_tool_architecture.md  operation_flow.md  publication_adjustment_roadmap.md  publication_feedback.md  publication_rubric.md  pyproject.toml  selection_architecture.md
inkscape_copilot/: __init__.py  always_on_worker.py  bridge.py  chat.py  cli.py  executor.py  harness.py  inkscape_control.py  mcp_resources.py  mcp_server.py  open_window.py  openai_bridge.py  planner.py  platform_support.py  publication_fixes.py  publication_memory.py  publication_qa.py  scene_graph.py  schema.py  targeting.py  templates.py  tools.py  verification.py  webapp.py  worker.py
inkscape_extension/: inkscape_copilot_apply_queue.inx  inkscape_copilot_open_window.inx
publication_examples/: README.md
scripts/: evaluate_screenshots.py  run_harness.py
tests/: test_harness.py  test_mcp_server.py  test_platform_support.py  test_publication_qa.py  test_schema_actions.py  test_tools.py
tests/fixtures/: harness_scenarios.json
tests/fixtures/contexts/: multi_panel_publication.json
