[project]
name = "figureagent-inkscape"
version = "0.1.0"
description = "FigureAgent for Inkscape: AI-assisted publication-figure editing agent."
requires-python = ">=3.10"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["inkscape_copilot"]

[project.scripts]
figureagent-inkscape = "inkscape_copilot.cli:main"
figureagent-inkscape-mcp = "inkscape_copilot.mcp_server:main"
figureagent-inkscape-worker = "inkscape_copilot.always_on_worker:main"
